--- a/YunWeiPingTai/YunWeiPingTai.csproj
+++ b/YunWeiPingTai/YunWeiPingTai.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.TencentSms" Version="2.1.403" />
     <PackageReference Include="FluentEmail.Mailgun" Version="2.5.3" />
+    <PackageReference Include="FluentValidation" Version="8.1.3" />
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
