--- a/YunWeiPingTai/YunWeiPingTai.csproj
+++ b/YunWeiPingTai/YunWeiPingTai.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <TypeScriptToolsVersion>3.0</TypeScriptToolsVersion>
     <UserSecretsId>802dfd6c-569e-4083-9eee-d137024b1325</UserSecretsId>
+	<RuntimeIdentifiers>win-x86;win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
@@ -68,6 +69,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="NewLife.Agent" Version="8.1.2019.406" />
+    <PackageReference Include="NewLife.Core" Version="8.1.2019.406" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.0" />
     <PackageReference Include="Pomelo.AspNetCore.TimedJob" Version="2.0.0-rtm-10046" />
     <PackageReference Include="RestSharp" Version="106.5.4" />
