--- a/YunWeiPingTai/appsettings.json
+++ b/YunWeiPingTai/appsettings.json
@@ -20,7 +20,7 @@
     //生产环境
     "productionConnectionStr": "Server=.\\SQLEXPRESS;Database=YunWeiPingTai;User ID=sa;Password=",
     //开发环境
-    "developmentConnectionStr": "Server=.\\SQLEXPRESS;Database=YunWeiPingTai;Trusted_Connection=True"
+    "developmentConnectionStr": "Server=.\\SQLEXPRESS;Database=YunWeiPingTai;User ID=sa;Password=sundigital123"
   },
 
   //redis配置
